Fix invisible wall preventing click at page bottom for prev-next links

--- a/wp-content/themes/revengeance/style.scss
+++ b/wp-content/themes/revengeance/style.scss
@@ -79,7 +79,6 @@ body {
 }
 
 #main-nav {
-	padding-top: 53px;
 	position: fixed;
 	bottom: 0;
 	left: 0;
